Fixed footer weirdness on mobile

--- a/css/footer.css
+++ b/css/footer.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     margin: 4rem 0;
     padding: 0 3rem;
 }
